--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,27 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.21.0</version>
+    </dependency>
+
+        <!-- Apache HttpClient -->
+        <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>4.5.13</version>
+      </dependency>
+  
+      <!-- Jackson JSON Processor -->
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.12.3</version>
+      </dependency>
+
   </dependencies>
 </project>
