--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,13 @@
       <version>1.14.3</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.3</version>
+    </dependency>
+
+
   </dependencies>
 </project>
