--- a/src/main/resources/config.properties.example
+++ b/src/main/resources/config.properties.example
@@ -1,3 +1,3 @@
-database.url = jdbc:postgresql://localhost:5432/database_name
-database.username = postgres
-database.password = postgres
+database.url = jdbc:postgresql://localhost:5432/crunchytransmitter
+database.username = crunchytransmitter
+database.password = password
