--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
       <version>8.1.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.23.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
