--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.3
   intl: ^0.19.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
