--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "crunchy_transmitter" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "crunchy_transmitter" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 de.milschschnitte All rights reserved." "\0"
             VALUE "OriginalFilename", "crunchy_transmitter.exe" "\0"
             VALUE "ProductName", "crunchy_transmitter" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
