--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.19.0
   http: ^1.2.1
   url_launcher: ^6.3.0
+  firebase_messaging: ^15.0.1
+  firebase_core: ^3.1.0
 
 dev_dependencies:
   flutter_test:
