--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>de.milschschnitte.crunchytransmitter</groupId>
   <artifactId>CrunchyTransmitter</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>CrunchyTransmitter</name>
   <url>http://maven.apache.org</url>
   <dependencies>
