--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
         - assets/kaiju_full.jpg
         - assets/kaiju_grey.jpg
         - assets/arrow_halfround.png
+        - assets/anschauen.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
