--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_messaging: ^15.0.1
   firebase_core: ^3.1.0
   week_number: ^1.1.0
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
