--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
         - assets/kaiju_grey.jpg
         - assets/arrow_halfround.png
         - assets/anschauen.png
+        - assets/logo-PayPal.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
