--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^3.1.0
   week_number: ^1.1.0
   connectivity: ^3.0.6
+  vibration: ^1.9.0
 
 dev_dependencies:
   flutter_test:
